--- a/springcrud/src/main/resources/templates/main.html
+++ b/springcrud/src/main/resources/templates/main.html
@@ -3,10 +3,13 @@
 
 <head>
     <meta charset="UTF-8"/>
-    <title>Список работников</title>
+    <title>Меню</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 </head>
 <body>
+<form method="post" action="/logout">
+    <p><input type="submit" value="Выход из системы"></p>
+</form>
 <p><a href="/employees">Сотрудники</a></p>
 <p><a href="/statuses">Полномочия</a></p>
 </body>
