Добавлена адаптивность таблиц
На устройствах с низким разрешением экрана первый столбец фиксируется (и прокручивается, если содержимое слишком большое), а остальные столбцы прокручиваются (демонстрация на видео где-то в папке static)

--- a/springcrud/src/main/resources/templates/addStatus.html
+++ b/springcrud/src/main/resources/templates/addStatus.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
-
 <head>
     <meta charset="UTF-8"/>
     <title>Добавить полномочие</title>
+    <meta name="viewport" content="width=device-width">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 </head>
 <body>
