--- a/springcrud/src/main/resources/templates/employees.html
+++ b/springcrud/src/main/resources/templates/employees.html
@@ -3,14 +3,20 @@
 <style>
     table {
         border-collapse: collapse;
-        border: 1px solid grey;
     }
-    th, td {border: 1px solid grey; padding: 5px; }
+    th, td {
+        border: 1px solid black;
+        padding: 5px;
+    }
 </style>
 <head>
     <meta charset="UTF-8"/>
     <title>Список работников</title>
+    <meta name="viewport" content="width=device-width">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <link rel="stylesheet" href="responsive-tables.css">
+    <script src="jquery.min.js"></script>
+    <script src="responsive-tables.js"></script>
     <script>
         $(document).ready(function() {
             getDataFromAPI();
@@ -89,6 +95,6 @@
 <p><a href="/employees/removeEmployee">Удалить сотрудника</a></p>
 <p><a href="/employees/addEmployeeStatus">Добавить полномочие сотруднику</a></p>
 <p><a href="/employees/removeEmployeeStatus">Убрать полномочие у сотрудника</a></p>
-<table id="main_table"><tbody></tbody></table>
+<table id="main_table" class="responsive"><tbody></tbody></table>
 </body>
 </html>
