--- a/springcrud/src/main/resources/templates/main.html
+++ b/springcrud/src/main/resources/templates/main.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html>
-
 <head>
     <meta charset="UTF-8"/>
+    <meta name="viewport" content="width=device-width">
     <title>Меню</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+
 </head>
 <body>
 <form method="post" action="/logout">
