--- a/springcrud/src/main/resources/templates/setEmployee.html
+++ b/springcrud/src/main/resources/templates/setEmployee.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
-
 <head>
     <meta charset="UTF-8"/>
+    <meta name="viewport" content="width=device-width">
     <title>Добавить полномочие</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 </head>
